--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# DS_Store
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
